--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
-<head>
+<html lang="en-sg">
+  <head>
+    <meta
+      charset="UTF-8"
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Solnah Labs</title>
-</head>
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li class="selected-page"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Another Page</a></li>
+      </ul>
+    </nav>
+    <footer>@Copyright 2022- Solnah Labs Pte Ltd.</footer>
+  </body>
+</html>
