Expanded website to more pages

--- a/about.html
+++ b/about.html
@@ -13,31 +13,15 @@
   <body>
     <nav>
       <menu>
-        <li><a href="index.html" class="selected-page">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="games.html">Games</a></li>
-        <li><a href="about.html">About Us</a></li>
+        <li><a href="about.html" class="selected-page">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
       </menu>
     </nav>
     <header>
-      <h1>Next-Gen Devs<br />Next-Gen Games</h1>
+      <h1>People Making Games for Fun and Profit</h1>
     </header>
-    <section class="game-spread">
-      <ul>
-        <li>
-          <h3>VectorShot</h3>
-          <br />FPS
-        </li>
-        <li>
-          <h3>Knights of SPADE</h3>
-          <br />TDRPG
-        </li>
-        <li>
-          <h3>Omega Rising</h3>
-          <br />TCG
-        </li>
-      </ul>
-    </section>
     <footer>@Copyright 2022- Solnah Labs Pte Ltd.</footer>
   </body>
 </html>
