--- a/contact.html
+++ b/contact.html
@@ -13,29 +13,23 @@
   <body>
     <nav>
       <menu>
-        <li><a href="index.html" class="selected-page">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="games.html">Games</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html" class="selected-page">Contact</a></li>
       </menu>
     </nav>
     <header>
-      <h1>Next-Gen Devs<br />Next-Gen Games</h1>
+      <h1>Hit Us Up</h1>
     </header>
     <section class="game-spread">
       <ul>
-        <li>
-          <h3>VectorShot</h3>
-          <br />FPS
-        </li>
-        <li>
-          <h3>Knights of SPADE</h3>
-          <br />TDRPG
-        </li>
-        <li>
-          <h3>Omega Rising</h3>
-          <br />TCG
-        </li>
+        <li>VectorShot</li>
+        <li>Knights of SPADE</li>
+        <li>Omega Rising</li>
+        <li>Strikedown</li>
+        <li>Quantum Redline</li>
+        <li>Sword Art Online</li>
       </ul>
     </section>
     <footer>@Copyright 2022- Solnah Labs Pte Ltd.</footer>
