Prep for launch: Finalised pages Added Video walkthrough

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
   <body>
     <nav>
       <menu>
+        <li><img src="favicon.png" height="30" /></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="games.html">Games</a></li>
         <li><a href="about.html" class="selected-page">About Us</a></li>
@@ -20,8 +21,36 @@
       </menu>
     </nav>
     <header>
-      <h1>People Making Games for Fun and Profit</h1>
+      <h1>Taking it Further Always</h1>
     </header>
+    <article>
+      <h2>Solnah Labs: the History</h2>
+      <br />
+      <p>
+        In 2016, NP graduate Sehna set up his own game company with two of his
+        longtime friends: Micheael and Juen-Sing. All three of them had yearned
+        for the creative freedom that came with running their own company, and
+        were daring enough to take the risk despite having no prior experience
+        managing a studio and developing their own games.
+      </p>
+      <br />
+      <p>
+        The first few years were hard and motivation among the three was low.
+        They solidered on to develop their own unique mark on the gaming
+        industry with their new IP, then called NeonFPS. However, 2020 brought
+        much success for the team. Alongside NeonFPS, Solnah Labs had been
+        brought on to help with external projects such as Strikedown, Sword Art
+        Online and Knights of SPADE.
+      </p>
+      <br />
+      <p>
+        In 2022, Solnah Labs launched their most ambitious project yet: their
+        completed FPS experience, now renamed from NeonFPS to VectorShot. Since
+        then, fans have been on the lookout for Solnah Labs' next move. Will
+        there be a new IP? More features in their current games? Our only answer
+        is to wait and see.
+      </p>
+    </article>
     <footer>@Copyright 2022- Solnah Labs Pte Ltd.</footer>
   </body>
 </html>
