--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
   <body>
     <nav>
       <menu>
+        <li><img src="favicon.png" height="30" /></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="games.html">Games</a></li>
         <li><a href="about.html">About Us</a></li>
@@ -22,16 +23,16 @@
     <header>
       <h1>Hit Us Up</h1>
     </header>
-    <section class="game-spread">
-      <ul>
-        <li>VectorShot</li>
-        <li>Knights of SPADE</li>
-        <li>Omega Rising</li>
-        <li>Strikedown</li>
-        <li>Quantum Redline</li>
-        <li>Sword Art Online</li>
-      </ul>
-    </section>
+    <article>
+      <h2>Inquiries</h2>
+      <p>ask@npshane.github.io</p>
+      <br>
+      <h2>Jobs</h2>
+      <p>jobs@npshane.github.io</p>
+      <br>
+      <h2>Support</h2>
+      <p>help@npshane.github.io</p>
+    </article>
     <footer>@Copyright 2022- Solnah Labs Pte Ltd.</footer>
   </body>
 </html>
