--- a/games.html
+++ b/games.html
@@ -13,6 +13,7 @@
   <body>
     <nav>
       <menu>
+        <li><img src="favicon.png" height="30" /></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="games.html" class="selected-page">Games</a></li>
         <li><a href="about.html">About Us</a></li>
@@ -22,16 +23,37 @@
     <header>
       <h1>Fun For All</h1>
     </header>
-    <section class="game-spread">
-      <ul>
-        <li>VectorShot</li>
-        <li>Knights of SPADE</li>
-        <li>Omega Rising</li>
-        <li>Strikedown</li>
-        <li>Quantum Redline</li>
-        <li>Sword Art Online</li>
+    <article>
+      <ul class="game-spread">
+        <li class="vectorshot">
+          <h3>VectorShot</h3>
+          <br />
+          <p>
+            An all-new FPS developed from scratch to stand against the crowd by
+            bringing renewed focus to the core of every FPS: the shooting.
+          </p>
+          <a href="https://www.shatterline.gg/" class="button">Buy</a>
+        </li>
+        <li class="spadeknights">
+          <h3>Knights of SPADE</h3>
+          <br />
+          <p>
+            A new take on the TD genre, combining it with other elements like an
+            RPG with unique characters, skills set in a modern fantasy world.
+          </p>
+          <a href="https://www.arknights.global/" class="button">Buy</a>
+        </li>
+        <li class="omega">
+          <h3>Omega Rising</h3>
+          <br />
+          <p>
+            A digital card game where you go head-to-head with your opponent in
+            a battle of draws, changing favours and luck.
+          </p>
+          <a href="#" class="button">Not Available</a>
+        </li>
       </ul>
-    </section>
+    </article>
     <footer>@Copyright 2022- Solnah Labs Pte Ltd.</footer>
   </body>
 </html>
