--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <nav>
       <menu>
+        <li><img src="favicon.png" height="30" /></li>
         <li><a href="index.html" class="selected-page">Home</a></li>
         <li><a href="games.html">Games</a></li>
         <li><a href="about.html">About Us</a></li>
@@ -22,22 +23,35 @@
     <header>
       <h1>Next-Gen Devs<br />Next-Gen Games</h1>
     </header>
-    <section class="game-spread">
-      <ul>
-        <li>
+    <article>
+      <h2>We Make...</h2>
+      <ul class="game-spread">
+        <li class="vectorshot">
           <h3>VectorShot</h3>
-          <br />FPS
+          <br />
+          <p>
+            An all-new FPS developed from scratch to stand against the crowd by
+            bringing renewed focus to the core of every FPS: the shooting.
+          </p>
         </li>
-        <li>
+        <li class="spadeknights">
           <h3>Knights of SPADE</h3>
-          <br />TDRPG
+          <br />
+          <p>
+            A new take on the TD genre, combining it with other elements like an
+            RPG with unique characters, skills set in a modern fantasy world.
+          </p>
         </li>
-        <li>
+        <li class="omega">
           <h3>Omega Rising</h3>
-          <br />TCG
+          <br />
+          <p>
+            A digital card game where you go head-to-head with your opponent in
+            a battle of draws, changing favours and luck.
+          </p>
         </li>
       </ul>
-    </section>
+    </article>
     <footer>@Copyright 2022- Solnah Labs Pte Ltd.</footer>
   </body>
 </html>
